# 2403_kaggle_titanic

./: README.md  pyproject.toml  sample_submit.csv  test.py
notebooks/: features.ipynb
tools/model/: lr_logistic_model.py
tools/models/: lr_logistic_model.py
tools/postprocess/: threshold.py
tools/predictor/: predictor.py
tools/preprocess/: 000_preprocess.py  ohe_preprocess.py
tools/preprocessor/: ohe_preprocess.py
tools/validator/: kfold.py
