[tool.poetry]
name = "2403-kaggle-titanic"
version = "0.1.0"
description = ""
authors = ["tstakeda <tstakeda711@gmail.com>"]
readme = "README.md"
packages = [{include = "2403_kaggle_titanic"}]

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.11.2"
kaggle = "^1.6.6"
polars = "^0.20.16"
ipykernel = "^6.29.3"
pygwalker = "^0.4.7"
setuptools = "^69.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
